@@ -160,7 +160,19 @@
             <div class="form-group row">
               <label for="Quantity" class="col-sm-3 col-md-3 form-control-label">Quantidade:</label>
               <div class="col-sm-8 col-md-9">
-                <input type="number" class="qty form-control" id="input-qty" name="qty" maxlength="5" value="1">
+                <select class="form-control mt-2" id="exampleFormControlSelect1">
+                  <option>1</option>
+                  <option>2</option>
+                  <option>3</option>
+                  <option>4</option>
+                  <option>5</option>
+                  <option>6</option>
+                  <option>7</option>
+                  <option>8</option>
+                  <option>9</option>
+                  <option>10</option>
+                </select>
+                <!-- <input type="number" class="qty form-control" id="input-qty" name="qty" maxlength="5" value="1"> -->
               </div>
             </div>
             <div class="form-group row">
